Changing the display of Character Talent data to two-column list of tables (fixed distribution).

--- a/views/held.jade
+++ b/views/held.jade
@@ -30,77 +30,44 @@ mixin TalentTable(__liste, __name)
 			col(style="width: 8em;")
 			col(style="width: 3em;")
 			col(style="width: 5em;")
-			col
-			col(style="width: 8em;")
-			col(style="width: 3em;")
-			col(style="width: 5em;")
 		thead
 			tr
 				th Talent
 				th Probe
 				th(title="Lernschwierigkeit")
 				th TaW
-				th Talent
-				th Probe
-				th(title="Lernschwierigkeit")
-				th TaW
 		tbody
-			- var __half = Math.ceil(__liste.length/2);
-			- for (var x=0; x<__half; x++)
+			each __talent in __liste
 				tr
-					+TalentData(__liste[x])
-					+TalentData(__liste[x+__half])
-
+					td.links= __talent.name
+						if __talent.Spezialisierung.length
+							|  (#{__talent.Spezialisierung.join(', ')})
+					td
+					td.mitte= __talent.Lernstufe
+					td.mitte= __talent.wert.toString().replace('-', '–')
+				
 mixin LanguageTable(__liste, __name)
 	table.data-section.mitte.eigenschaften
 		caption= __name
 		colgroup
 			col
-			col(style="width: 5em")
-			col(style="width: 3em")
 			col(style="width: 5em;")
-			col
-			col(style="width: 5em")
-			col(style="width: 3em")
-			col(style="width: 5em")
+			col(style="width: 3em;")
+			col(style="width: 5em;")
 		thead
 			tr
 				th Talent
 				th Kompl.
 				th(title="Lernschwierigkeit")
 				th TaW
-				th Talent
-				th Kompl.
-				th(title="Lernschwierigkeit")
-				th TaW
 		tbody
-			- var __half = Math.ceil(__liste.length/2);
-			- for (var x=0; x<__half; x++)
+			each __lang in __liste
 				tr
-					td.links=__liste[x].name
-					td=__liste[x].Komplexität
-					td=__liste[x].Lernstufe
-					td=__liste[x].wert
-					if __liste[x+__half]
-						td.links=__liste[x+__half].name
-						td=__liste[x+__half].Komplexität
-						td=__liste[x+__half].Lernstufe
-						td=__liste[x+__half].wert
+					td.links=__lang.name
+					td=__lang.Komplexität
+					td=__lang.Lernstufe
+					td=__lang.wert
 
-mixin KampfData(__talent)
-	if __talent
-		td.links= __talent.name
-			if __talent.Spezialisierung.length
-				|  (#{__talent.Spezialisierung.join(', ')})
-		td= __talent.Lernstufe
-		if typeof __talent.AT === 'number' && typeof __talent.PA === 'number'
-			td= __talent.AT + Kampfwerte.AT
-			td= __talent.PA + Kampfwerte.PA
-		else
-			td= __talent.AT + Kampfwerte.FK
-			td
-		td= __talent.TaW
-		
 mixin KampfTable(__liste, __name)
 	table.data-section.mitte.eigenschaften
 		caption= __name
@@ -110,11 +77,6 @@ mixin KampfTable(__liste, __name)
 			col(style="width: 5em;")
 			col(style="width: 5em;")
 			col(style="width: 5em;")
-			col
-			col(style="width: 3em;")
-			col(style="width: 5em;")
-			col(style="width: 5em;")
-			col(style="width: 5em;")
 		thead
 			tr
 				th Talent
@@ -122,17 +84,20 @@ mixin KampfTable(__liste, __name)
 				th AT
 				th PA
 				th TaW
-				th Talent
-				th
-				th AT
-				th PA
-				th TaW
 		tbody
-			- var __half = Math.ceil(__liste.length/2);
-			- for (var x=0; x<__half; x++)
+			each __talent in __liste
 				tr
-					+KampfData(__liste[x])
-					+KampfData(__liste[x+__half])
+					td.links= __talent.name
+						if __talent.Spezialisierung.length
+							|  (#{__talent.Spezialisierung.join(', ')})
+					td= __talent.Lernstufe
+					if typeof __talent.AT === 'number' && typeof __talent.PA === 'number'
+						td= __talent.AT + Kampfwerte.AT
+						td= __talent.PA + Kampfwerte.PA
+					else
+						td= __talent.AT + Kampfwerte.FK
+						td
+					td= __talent.TaW
 
 !!! 5
 html(lang="de")
@@ -321,13 +286,15 @@ html(lang="de")
 				+SFTableSection(SF.magisch, 'Magische Sonderfertigkeiten')
 		a#taw				
 		section
-			+KampfTable(Talente.Nahkampf, 'Nahkampf')
-			+KampfTable(Talente.Fernkampf, 'Fernkampf')
-			+TalentTable(Talente.körperlich, 'Körperliche Talente')
-			+TalentTable(Talente.Gesellschaft, 'Gesellschaftliche Talente')
-			+TalentTable(Talente.Natur, 'Natur-Talente')
-			+TalentTable(Talente.Wissen, 'Wissenstalente')
-			+TalentTable(Talente.Handwerk, 'Handwerkstalente')
-			+LanguageTable(Talente.Sprachen, 'Sprachen')
-			+LanguageTable(Talente.Schriften, 'Schriften')
+			.vor-nach.fl-links
+				+KampfTable(Talente.Nahkampf, 'Nahkampf')
+				+KampfTable(Talente.Fernkampf, 'Fernkampf')
+				+TalentTable(Talente.körperlich, 'Körperliche Talente')
+				+TalentTable(Talente.Gesellschaft, 'Gesellschaftliche Talente')
+				+TalentTable(Talente.Natur, 'Natur-Talente')
+			.vor-nach.fl-rechts
+				+TalentTable(Talente.Wissen, 'Wissenstalente')
+				+TalentTable(Talente.Handwerk, 'Handwerkstalente')
+				+LanguageTable(Talente.Sprachen, 'Sprachen')
+				+LanguageTable(Talente.Schriften, 'Schriften')
 		
