--- a/views/held.jade
+++ b/views/held.jade
@@ -121,7 +121,7 @@ html(lang="de")
 						li
 							a(href="/taw/"+_id) Talente
 						li
-							a(href="/char/"+_charID) Eigenschaften
+							a(href="/char/"+_id) Eigenschaften
 						li
 							a(href="/sf/"+_id) Sonderfertigkeiten
 						li
