--- a/views/system/table-of-talents.jade
+++ b/views/system/table-of-talents.jade
@@ -36,6 +36,12 @@ html
 		section
 			table
 				caption Liste der Talente
+				colgroup
+					col(style="width: 15em;")
+					col(style="width: 15em;")
+					col(style="width: 10em;")
+					col(style="width: 3em;")
+					col
 				thead
 					tr
 						th Talent
